# LatticeCrypto

./: .gitignore  CMakeLists.txt  LatticeCrypto.h  config.h.cmake  kex.c  ntt_constants.c  random.c
tests/: test_extras.c  test_extras.h  tests.c
